# sevico-be

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/config/: database.py  settings.py
app/models/: user_model.py
app/routes/: auth_routes.py
app/schemas/: user_schema.py
app/services/: auth_service.py  email_service.py
app/utils/: jwt_helper.py  password_helper.py
